Added texture to the cube Removed the coloring of the cube

--- a/jEngine/jEngine.csproj
+++ b/jEngine/jEngine.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="assets\textures\Grass_1.png" />
     <Content Include="packages.config" />
     <Content Include="source\main\module.utilities.js" />
     <Content Include="source\build\build.bat" />
