--- a/jEngine/jEngine.csproj
+++ b/jEngine/jEngine.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Content Include="assets\textures\Grass_1.png" />
     <Content Include="packages.config" />
+    <Content Include="source\main\mesh.cube.js" />
     <Content Include="source\main\module.utilities.js" />
     <Content Include="source\build\build.bat" />
     <Content Include="source\build\build.json" />
