--- a/jEngine/jEngine.csproj
+++ b/jEngine/jEngine.csproj
@@ -60,6 +60,7 @@
     <Content Include="assets\textures\Grass_1.png" />
     <Content Include="packages.config" />
     <Content Include="source\main\mesh.cube.js" />
+    <Content Include="source\main\mesh.Geometry.js" />
     <Content Include="source\main\module.utilities.js" />
     <Content Include="source\build\build.bat" />
     <Content Include="source\build\build.json" />
